drafted validation loop

--- a/Glioblastoma Segmentation.ipynb
+++ b/Glioblastoma Segmentation.ipynb
@@ -36,9 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Previewing the MRI Data\n",
     "# TODO: Collect all imports later and add notes next to them\n",
@@ -88,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-01-11 20:07:18,997 - Global seed set to 1607\n"
+      "2023-01-12 13:29:56,902 - Global seed set to 1607\n"
      ]
     },
     {
@@ -104,6 +113,32 @@
    ],
    "source": [
     "seed_everything(1607)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "\n",
+    "def clear_gpu_cache():\n",
+    "    \"\"\"Clear the PyTorch GPU Allocation if an OOM error occurs.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    try:\n",
+    "        print(\"Deleting Model\")\n",
+    "        global model\n",
+    "        del model\n",
+    "    except NameError as e:\n",
+    "        print(f\"Model Already Cleared\")\n",
+    "\n",
+    "    print(\"Collecting Garbage\")\n",
+    "    gc.collect()\n",
+    "    print(\"Clearing CUDA Cache\")\n",
+    "    torch.cuda.empty_cache()\n",
+    "    print(\"Done\")\n"
    ]
   },
   {
@@ -202,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +294,24 @@
     "    ]\n",
     ")\n",
     "\n",
-    "# TODO: Declare transforms for Testing and Validation Datasets\n"
+    "transform_validation_dataset = Compose(\n",
+    "    [\n",
+    "        LoadImaged(keys=[\"image\", \"seg\"]),\n",
+    "        EnsureChannelFirstd(keys=[\"image\"]),\n",
+    "        EnsureTyped(keys=[\"image\", \"seg\"]),\n",
+    "        ConvertLabelsIntoOneHotd(keys=\"seg\"),\n",
+    "        # Orientationd(keys=[\"image\", \"seg\"],axcodes='RAS'),\n",
+    "        #! Causes misalignment on Mask Orientationd\n",
+    "        # Spacingd(\n",
+    "        #     keys=[\"image\", \"seg\"],\n",
+    "        #     pixdim=(1.0, 1.0, 1.0),\n",
+    "        #     mode=(\"bilinear\", \"nearest\"),\n",
+    "        # ),\n",
+    "        #! Training Dataset Already set to Pixel Dimension of 1mm^3\n",
+    "        NormalizeIntensityd(keys=\"image\", nonzero=True, channel_wise=True),\n",
+    "    ]\n",
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -395,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +460,7 @@
     "\n",
     "#! transformation in validation dataset\n",
     "val_data_loader = DataLoader(\n",
-    "    Dataset(val_cases[:10], transform_training_dataset),\n",
+    "    Dataset(val_cases[:10], transform_validation_dataset),\n",
     "    shuffle=True,\n",
     "    batch_size=1,\n",
     ")\n"
@@ -424,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +489,7 @@
     "\n",
     "#! Update with proper values\n",
     "max_epochs = 10\n",
-    "val_interval = 2\n",
+    "val_interval = 5\n",
     "\n",
     "model = SegResNet(\n",
     "    blocks_down=[1, 2, 2, 4],\n",
@@ -466,13 +518,25 @@
     "\n",
     "# ? Check inferer parameters and tweak\n",
     "def inference(input):\n",
+    "    \"\"\"Do Sliding Window Inference on input tensor\n",
+    "    To avoid OOM Error, Input Model done on CPU.\n",
+    "    Patch taken from input and its inference done on GPU\n",
+    "    to speed up inference time.\n",
+    "\n",
+    "    Args:\n",
+    "        input: Full input to pass in the model. For the case\n",
+    "        of this project size => (3,240,240,155)\n",
+    "    \"\"\"\n",
     "    def _compute(input):\n",
     "        return sliding_window_inference(\n",
-    "            inputs=input,\n",
+    "            inputs=input.to('cpu'),\n",
     "            roi_size=(96, 96, 96),\n",
     "            sw_batch_size=1,\n",
     "            predictor=model,\n",
     "            overlap=0.5,\n",
+    "            padding_mode=\"constant\",\n",
+    "            sw_device=\"cuda:0\",\n",
+    "            device=\"cpu\",\n",
     "        )\n",
     "\n",
     "    with torch.cuda.amp.autocast():\n",
@@ -485,7 +549,70 @@
     "\n",
     "dice_metric = DiceMetric(include_background=True, reduction=\"mean\")\n",
     "# dice_metric_batch = DiceMetric(include_background=True, reduction=\"mean_batch\")\n",
-    "iou_metric = MeanIoU(include_background=True, reduction=\"mean_channel\")\n"
+    "iou_metric = MeanIoU(include_background=True, reduction=\"mean_batch\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06742996722459793\n"
+     ]
+    }
+   ],
+   "source": [
+    "#! Testing validation DO NOT RUN IN NORMAL SEQ\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    i = 0\n",
+    "    for val_data in val_data_loader:\n",
+    "        val_inputs, val_labels = (\n",
+    "            val_data[\"image\"], # load to cpu\n",
+    "            val_data[\"seg\"].to(device),\n",
+    "        )\n",
+    "\n",
+    "        val_outputs = inference(val_inputs)\n",
+    "\n",
+    "        val_outputs = [\n",
+    "            post_processing_validation(i) for i in decollate_batch(val_outputs.to(device))\n",
+    "        ]\n",
+    "        dice_metric(y_pred=val_outputs, y=val_labels)\n",
+    "        i+= 1\n",
+    "        \n",
+    "        if i == 4:\n",
+    "                break\n",
+    "\n",
+    "    metric = dice_metric.aggregate().item()\n",
+    "    dice_metric.reset()\n",
+    "\n",
+    "    print(metric)\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting Model\n",
+      "Collecting Garbage\n",
+      "Clearing CUDA Cache\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "clear_gpu_cache()"
    ]
   },
   {
@@ -498,9 +625,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------\n",
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:46<00:00,  2.13s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 1 average loss: 0.9074\n",
+      "\n",
+      "----------\n",
+      "Epoch 2/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:45<00:00,  2.10s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 2 average loss: 0.8747\n",
+      "\n",
+      "----------\n",
+      "Epoch 3/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:45<00:00,  2.10s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 3 average loss: 0.8451\n",
+      "\n",
+      "----------\n",
+      "Epoch 4/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:45<00:00,  2.10s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 4 average loss: 0.8019\n",
+      "\n",
+      "----------\n",
+      "Epoch 5/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:47<00:00,  2.14s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 5 average loss: 0.7524\n",
+      "\n",
+      "Validating Training at 5 Epochs\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'best_metric' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[68], line 103\u001b[0m\n\u001b[0;32m     93\u001b[0m                     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39msaved new best metric model\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     94\u001b[0m                 \u001b[39mprint\u001b[39m(\n\u001b[0;32m     95\u001b[0m                     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcurrent epoch: \u001b[39m\u001b[39m{\u001b[39;00mepoch \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m current mean dice: \u001b[39m\u001b[39m{\u001b[39;00mmetric\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m     96\u001b[0m                     \u001b[39m# f\" tc: {metric_tc:.4f} wt: {metric_wt:.4f} et: {metric_et:.4f}\"\u001b[39;00m\n\u001b[0;32m     97\u001b[0m                     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mbest mean dice: \u001b[39m\u001b[39m{\u001b[39;00mbest_metric\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m     98\u001b[0m                     \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m at epoch: \u001b[39m\u001b[39m{\u001b[39;00mbest_metric_epoch\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m     99\u001b[0m                 )\n\u001b[1;32m--> 103\u001b[0m training()\n",
+      "Cell \u001b[1;32mIn[68], line 86\u001b[0m, in \u001b[0;36mtraining\u001b[1;34m()\u001b[0m\n\u001b[0;32m     83\u001b[0m dice_metric\u001b[39m.\u001b[39mreset()\n\u001b[0;32m     84\u001b[0m \u001b[39m# dice_metric_batch.reset()\u001b[39;00m\n\u001b[1;32m---> 86\u001b[0m \u001b[39mif\u001b[39;00m metric \u001b[39m>\u001b[39m best_metric:\n\u001b[0;32m     87\u001b[0m     best_metric \u001b[39m=\u001b[39m metric\n\u001b[0;32m     88\u001b[0m     best_metric_epoch \u001b[39m=\u001b[39m epoch \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'best_metric' referenced before assignment"
+     ]
+    }
+   ],
    "source": [
     "best_metric = -1\n",
     "best_metric_epoch = -1\n",
@@ -563,7 +795,7 @@
     "            with torch.no_grad():\n",
     "                for val_data in val_data_loader:\n",
     "                    val_inputs, val_labels = (\n",
-    "                        val_data[\"image\"].to(device),\n",
+    "                        val_data[\"image\"],\n",
     "                        val_data[\"seg\"].to(device),\n",
     "                    )\n",
     "\n",
@@ -571,43 +803,40 @@
     "                    \n",
     "                    val_outputs = [\n",
     "                        post_processing_validation(i)\n",
-    "                        for i in decollate_batch(val_outputs)\n",
+    "                        for i in decollate_batch(val_outputs.to(device))\n",
     "                    ]\n",
     "                    dice_metric(y_pred=val_outputs, y=val_labels)\n",
     "\n",
     "                metric = dice_metric.aggregate().item()\n",
     "                metric_values.append(metric)\n",
-    "                metric_batch = dice_metric_batch.aggregate()\n",
-    "                metric_tc = metric_batch[0].item()\n",
-    "                metric_values_tc.append(metric_tc)\n",
-    "                metric_wt = metric_batch[1].item()\n",
-    "                metric_values_wt.append(metric_wt)\n",
-    "                metric_et = metric_batch[2].item()\n",
-    "                metric_values_et.append(metric_et)\n",
+    "                # metric_batch = dice_metric_batch.aggregate()\n",
+    "                # metric_tc = metric_batch[0].item()\n",
+    "                # metric_values_tc.append(metric_tc)\n",
+    "                # metric_wt = metric_batch[1].item()\n",
+    "                # metric_values_wt.append(metric_wt)\n",
+    "                # metric_et = metric_batch[2].item()\n",
+    "                # metric_values_et.append(metric_et)\n",
     "                dice_metric.reset()\n",
-    "                dice_metric_batch.reset()\n",
+    "                # dice_metric_batch.reset()\n",
     "\n",
     "                if metric > best_metric:\n",
     "                    best_metric = metric\n",
     "                    best_metric_epoch = epoch + 1\n",
-    "                    best_metrics_epochs_and_time[0].append(best_metric)\n",
-    "                    best_metrics_epochs_and_time[1].append(best_metric_epoch)\n",
-    "                    best_metrics_epochs_and_time[2].append(time.time() - total_start)\n",
     "                    torch.save(\n",
     "                        model.state_dict(),\n",
-    "                        os.path.join(root_dir, \"best_metric_model.pth\"),\n",
+    "                        path.join(\"checkpoint\", \"best_metric_model.pth\"),\n",
     "                    )\n",
     "                    print(\"saved new best metric model\")\n",
     "                print(\n",
     "                    f\"current epoch: {epoch + 1} current mean dice: {metric:.4f}\"\n",
-    "                    f\" tc: {metric_tc:.4f} wt: {metric_wt:.4f} et: {metric_et:.4f}\"\n",
+    "                    # f\" tc: {metric_tc:.4f} wt: {metric_wt:.4f} et: {metric_et:.4f}\"\n",
     "                    f\"\\nbest mean dice: {best_metric:.4f}\"\n",
     "                    f\" at epoch: {best_metric_epoch}\"\n",
     "                )\n",
     "\n",
     "                \n",
     "\n",
-    "        break #! Only 1 epoch for testing\n"
+    "training() \n"
    ]
   },
   {
@@ -642,48 +871,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = torch.Tensor(torch.ones(3,96,96,96))"
+    "a = torch.rand(3,240,240,155).to(device)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dice_metric = DiceMetric(include_background=True, reduction=\"mean\")\n",
+    "dice_metric_channel = DiceMetric(include_background=True, reduction=\"mean_batch\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metric = dice_metric(a,a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1.],\n",
-       "        [1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1.],\n",
-       "        [1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "         1., 1., 1., 1., 1., 1.]])"
+       "0.6667072176933289"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "iou_metric(a,a)\n"
+    "dice_metric.aggregate().item()"
    ]
   },
   {
@@ -692,26 +923,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "et, t1, t2 = iou_metric.aggregate()"
+    "dice_metric.reset()\n",
+    "dice_metric_channel.reset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 240])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "1.0"
+       "tensor(0.6664, device='cuda:0')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "print(dice_metric_channel(a,a).shape)\n",
+    "\n",
+    "dice_metric_channel.aggregate()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DiceMetric' object has no attribute 'size'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[53], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dice_metric_channel\u001b[39m.\u001b[39;49msize\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DiceMetric' object has no attribute 'size'"
+     ]
+    }
+   ],
+   "source": [
+    "dice_metric_channel.size"
+   ]
   },
   {
    "cell_type": "code",
