--- a/Glioblastoma Segmentation.ipynb
+++ b/Glioblastoma Segmentation.ipynb
@@ -1127,6 +1127,8 @@
     "                        \"epoch\": epoch,\n",
     "                        \"model_state_dict\": model.state_dict(),\n",
     "                        \"optimiser_state_dict\": optimizer.state_dict(),\n",
+    "                        \"loss_per_epoch\": epoch_loss_values,\n",
+    "                        \"dice_metric\": metric_values\n",
     "                    },\n",
     "                    path.join(\"./checkpoint\", f\"best_metric_{model_name}_{training_time}.pth\"),\n",
     "                )\n",
@@ -1302,7 +1304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
