More validation samples

--- a/Glioblastoma Segmentation.ipynb
+++ b/Glioblastoma Segmentation.ipynb
@@ -51,6 +51,7 @@
    "source": [
     "# Previewing the MRI Data\n",
     "# TODO: Collect all imports later and add notes next to them\n",
+    "import csv\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
@@ -98,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-01-15 13:47:52,758 - Global seed set to 1607\n"
+      "2023-01-15 21:04:43,953 - Global seed set to 1607\n"
      ]
     },
     {
@@ -166,13 +167,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "          Ratio of Classes -> HGG/Total\n",
-      "          - Training 0.80\t| 265 Cases.\n",
-      "          - Validation 0.79\t| 67 Cases.\n",
-      "          - Testing 0.78\t| 37 Cases.\n",
-      "          \n",
-      "          Total Cases: 369\n",
-      "          \n"
+      "    Total Samples = 369\n",
+      "\n",
+      "    Ratio of LGG:HGG in 295 Training Samples:\n",
+      "    \t Ratio = 0.26\n",
+      "\n",
+      "\n",
+      "    Ratio of LGG:HGG in 74 Validation Samples:\n",
+      "    \t Ratio = 0.25\n",
+      "\n",
+      "    \n",
+      "    \n"
      ]
     }
    ],
@@ -182,7 +187,7 @@
     "NAME_MAPPING = r\"./MICCAI_BraTS2020_TrainingData/name_mapping.csv\"\n",
     "\n",
     "# Function returns names of cases to be used\n",
-    "train_cases, val_cases, test_cases = train_val_test_dataset(NAME_MAPPING)\n",
+    "train_cases, val_cases = train_val_test_dataset(NAME_MAPPING)\n",
     "\n"
    ]
   },
@@ -221,22 +226,6 @@
     "        ),\n",
     "    }\n",
     "    for case in val_cases\n",
-    "]\n",
-    "\n",
-    "#TODO : Test cases can be merged with val\n",
-    "test_cases = [\n",
-    "    {\n",
-    "        \"image\": [\n",
-    "            path.join(TRAINING_DATASET_PATH, case, f\"{case}_t1.nii.gz\"),\n",
-    "            path.join(TRAINING_DATASET_PATH, case, f\"{case}_t1ce.nii.gz\"),\n",
-    "            path.join(TRAINING_DATASET_PATH, case, f\"{case}_t2.nii.gz\"),\n",
-    "            path.join(TRAINING_DATASET_PATH, case, f\"{case}_flair.nii.gz\"),\n",
-    "        ],\n",
-    "        \"seg\": path.join(\n",
-    "            TRAINING_DATASET_PATH, case, f\"{path.split(case)[-1]}_seg.nii.gz\"\n",
-    "        ),\n",
-    "    }\n",
-    "    for case in test_cases\n",
     "]\n"
    ]
   },
@@ -1798,6 +1787,39 @@
     "fig = plt.axes()\n",
     "fig.plot(epoch_loss_values)\n",
     "fig.plot([x*4 for x in range(len(metric_values))],metric_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.000107837788809226]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_scheduler.get_last_lr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with open(f\"./checkpoint/results_{model_name}_{training_time}.csv\",'w') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    for epoch,loss in enumerate(epoch_loss_values): \n",
+    "        writer.writerow([epoch, loss])"
    ]
   },
   {
