just use torch save

--- a/Glioblastoma Segmentation.ipynb
+++ b/Glioblastoma Segmentation.ipynb
@@ -1808,26 +1808,6 @@
    "source": [
     "lr_scheduler.get_last_lr()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "with open(f\"./checkpoint/results_{model_name}_{training_time}.csv\",'w') as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    for epoch,loss in enumerate(epoch_loss_values): \n",
-    "        writer.writerow([epoch, loss])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1846,7 +1826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
