--- a/experiments/Patch Size With Basic UNet.ipynb
+++ b/experiments/Patch Size With Basic UNet.ipynb
@@ -25,18 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Collect all imports later and add notes next to them\n",
     "import csv\n",
@@ -70,6 +61,8 @@
     "from monai.inferers import sliding_window_inference\n",
     "from monai.optimizers import Novograd, WarmupCosineSchedule\n",
     "\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "\n",
     "import torch\n",
     "\n",
     "from tqdm import tqdm"
@@ -77,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,29 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_trial_results(\n",
-    "    epoch:int,\n",
-    "    patchsize:tuple[int,int,int],\n",
-    "    loss=np.nan,\n",
-    "    average_metric=np.nan,\n",
-    "    wt_metric=np.nan,\n",
-    "    tc_metric=np.nan,\n",
-    "    et_metric=np.nan,\n",
-    "):\n",
-    "    \"\"\"Log experiments results\"\"\"\n",
+    "# Logger \n",
     "\n",
-    "    with open(f\"Results_{patchsize}.csv\", \"a+\") as f:\n",
-    "        writer = csv.writer(f, delimiter=\",\", lineterminator=\"\\n\")\n",
-    "        writer.writerow([epoch,loss,average_metric,wt_metric,tc_metric,et_metric])\n"
+    "logger = SummaryWriter(log_dir=\"./tensorboard_logs/patch_120_2_res\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +329,6 @@
     "    clear_gpu_cache()\n",
     "\n",
     "    device = torch.device(\"cuda:0\") if torch.cuda.is_available() else \"cpu\"\n",
-    "    print(f\"{20*'-'}\")\n",
     "\n",
     "    val_interval = 2\n",
     "\n",
@@ -362,27 +343,31 @@
     "        out_channels=3,\n",
     "        strides=(2, 2, 2),\n",
     "        channels=channels,\n",
-    "        num_res_units=0,\n",
+    "        num_res_units=2,\n",
     "    ).to(device)\n",
     "\n",
-    "    # initial_lr = 1e-4\n",
-    "\n",
-    "    # optimizer = torch.optim.Adam(model.parameters(), initial_lr)\n",
     "    optimizer = Novograd(model.parameters())\n",
     "\n",
     "    scaler = torch.cuda.amp.GradScaler()\n",
     "\n",
-    "    # lr_scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(\n",
-    "    #     optimizer, T_max=epochs, verbose=True\n",
-    "    # )\n",
     "\n",
     "    lr_scheduler = WarmupCosineSchedule(\n",
-    "        optimizer, warmup_steps=5, warmup_multiplier=0.1, t_total=epochs\n",
+    "        optimizer, warmup_steps=int(epochs/10), warmup_multiplier=1e-10, t_total=epochs\n",
+    "    )\n",
+    "\n",
+    "    scheduler_reduce_on_plat = torch.optim.lr_scheduler.ReduceLROnPlateau(\n",
+    "        optimizer, mode=\"max\", factor=0.1, patience=20, threshold=0.01\n",
     "    )\n",
     "\n",
     "    loss_function = DiceCELoss(sigmoid=True, squared_pred=True)\n",
     "\n",
-    "    # loss_function = DiceFocalLoss(sigmoid=True,squared_pred=True,gamma=2)\n",
+    "\n",
+    "    # try:\n",
+    "    #     chk = torch.load(\"./Patch_Size_Experiment_Results/Low_Learning_Rate/Best_Metric_PatchSize_(120, 120, 120).pth\")\n",
+    "    #     model.load_state_dict(chk['model'])\n",
+    "    #     optimizer.load_state_dict(chk['optimiser'])\n",
+    "    # except Exception as e:\n",
+    "    #     print(e)\n",
     "\n",
     "    # ? Check inferer parameters and tweak\n",
     "    def inference(input):\n",
@@ -448,17 +433,17 @@
     "            cache_dir=\"./cache_patch_experiment\",\n",
     "        ),\n",
     "        shuffle=False,\n",
-    "        batch_size=1,\n",
+    "        batch_size=2,\n",
     "    )\n",
     "\n",
     "    best_metric = -1\n",
     "\n",
     "    for epoch in range(epochs):\n",
-    "        print(\"-\" * 10)\n",
-    "        print(f\"Epoch {epoch + 1}/{epochs}\")\n",
     "        model.train()\n",
     "        epoch_loss = 0\n",
     "        step = 0\n",
+    "\n",
+    "        logger.add_scalar(\"Learning_Rate\",optimizer.param_groups[0]['lr'],epoch)\n",
     "\n",
     "        for batch_data in tqdm(train_data_loader):\n",
     "\n",
@@ -481,7 +466,7 @@
     "\n",
     "        lr_scheduler.step()\n",
     "\n",
-    "        log_trial_results(epoch=epoch, patchsize=patchsize, loss=epoch_loss_value)\n",
+    "        logger.add_scalar('Training/Loss',epoch_loss_value,epoch)\n",
     "\n",
     "        if (epoch + 1) % val_interval == 0:\n",
     "            model.eval()\n",
@@ -503,6 +488,8 @@
     "\n",
     "                metric = dice_metric.aggregate().item()\n",
     "\n",
+    "                scheduler_reduce_on_plat.step(metric)\n",
+    "\n",
     "                metric_batch = dice_metric_batch.aggregate()\n",
     "                metric_wt = metric_batch[0].item()\n",
     "                metric_tc = metric_batch[1].item()\n",
@@ -514,19 +501,16 @@
     "                        {\n",
     "                            \"model\": model.state_dict(),\n",
     "                            \"optimiser\": optimizer.state_dict(),\n",
-    "                            \"scheduler\":lr_scheduler.state_dict()\n",
+    "                            \"scheduler\": lr_scheduler.state_dict(),\n",
     "                        },\n",
     "                        f\"./Patch_Size_Experiment_Results/Best_Metric_PatchSize_{patchsize}.pth\",\n",
     "                    )\n",
     "\n",
-    "                log_trial_results(\n",
-    "                    epoch=epoch,\n",
-    "                    patchsize=patchsize,\n",
-    "                    average_metric=metric,\n",
-    "                    wt_metric=metric_wt,\n",
-    "                    tc_metric=metric_tc,\n",
-    "                    et_metric=metric_et,\n",
-    "                )\n",
+    "                logger.add_scalar('DICE/Average',metric,epoch)\n",
+    "                logger.add_scalar('DICE/WT',metric_wt,epoch)\n",
+    "                logger.add_scalar('DICE/TC',metric_tc,epoch)\n",
+    "                logger.add_scalar('DICE/ET',metric_et,epoch)\n",
+    "\n",
     "\n",
     "                dice_metric.reset()\n",
     "                dice_metric_batch.reset()\n"
@@ -548,7 +532,7 @@
     "\n",
     "for patchsize in patchsizes:\n",
     "    try:\n",
-    "        trial(patchsize,epochs=50)\n",
+    "        trial(patchsize,epochs=100)\n",
     "    except Exception as e:\n",
     "        print(f\"Exception for patch size {patchsize}\")\n",
     "        print(e)"
@@ -857,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
