--- a/Textural Analysis.ipynb
+++ b/Textural Analysis.ipynb
@@ -843,11 +843,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import sys"
    ]
   },
   {
@@ -862,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -878,25 +879,20 @@
      "output_type": "stream",
      "text": [
       "Error processing case: 289\n",
-      "Error: list index out of range\n",
-      "Error processing case: 294\n",
-      "Error: list index out of range\n"
+      "\n",
+      "Unexpected error: <class 'IndexError'>\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\ibrah\\miniconda3\\envs\\fyp\\lib\\site-packages\\monai\\metrics\\hausdorff_distance.py:170: UserWarning: the prediction of class 2 is all 0, this may result in nan/inf distance.\n",
-      "  warnings.warn(f\"the prediction of class {c} is all 0, this may result in nan/inf distance.\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error processing case: 321\n",
-      "Error: list index out of range\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[115], line 17\u001b[0m\n\u001b[0;32m     13\u001b[0m result \u001b[39m=\u001b[39m evaluate_model(model, case)\n\u001b[0;32m     15\u001b[0m metric_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([metric_df, pd\u001b[39m.\u001b[39mDataFrame(result[\u001b[39m\"\u001b[39m\u001b[39mmetrics\u001b[39m\u001b[39m\"\u001b[39m])],ignore_index\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m---> 17\u001b[0m ground_truth \u001b[39m=\u001b[39m get_features(result[\u001b[39m\"\u001b[39;49m\u001b[39minput\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n\u001b[0;32m     19\u001b[0m pred_input \u001b[39m=\u001b[39m {\n\u001b[0;32m     20\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mimage\u001b[39m\u001b[39m\"\u001b[39m: result[\u001b[39m\"\u001b[39m\u001b[39minput\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mimage\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mto(\u001b[39m\"\u001b[39m\u001b[39mcpu\u001b[39m\u001b[39m\"\u001b[39m),\n\u001b[0;32m     21\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mseg\u001b[39m\u001b[39m\"\u001b[39m: torch\u001b[39m.\u001b[39msqueeze(result[\u001b[39m\"\u001b[39m\u001b[39mpred\u001b[39m\u001b[39m\"\u001b[39m])\u001b[39m.\u001b[39mto(\u001b[39m\"\u001b[39m\u001b[39mcpu\u001b[39m\u001b[39m\"\u001b[39m),\n\u001b[0;32m     22\u001b[0m }\n\u001b[0;32m     24\u001b[0m predicted_features \u001b[39m=\u001b[39m get_features(pred_input)\n",
+      "Cell \u001b[1;32mIn[4], line 59\u001b[0m, in \u001b[0;36mget_features\u001b[1;34m(input)\u001b[0m\n\u001b[0;32m     50\u001b[0m wt_non_txt \u001b[39m=\u001b[39m {\n\u001b[0;32m     51\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mcenter\u001b[39m\u001b[39m\"\u001b[39m: ndimage\u001b[39m.\u001b[39mcenter_of_mass(wt[blob_wt[\u001b[39m0\u001b[39m]]),  \u001b[39m# center of mass\u001b[39;00m\n\u001b[0;32m     52\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mvolume\u001b[39m\u001b[39m\"\u001b[39m: np\u001b[39m.\u001b[39mcount_nonzero(wt[blob_wt[\u001b[39m0\u001b[39m]]) \u001b[39m/\u001b[39m \u001b[39m10\u001b[39m\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m,  \u001b[39m# volume in cm^3\u001b[39;00m\n\u001b[0;32m     53\u001b[0m     }\n\u001b[0;32m     54\u001b[0m tc_non_txt \u001b[39m=\u001b[39m {\n\u001b[0;32m     55\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mcenter\u001b[39m\u001b[39m\"\u001b[39m: ndimage\u001b[39m.\u001b[39mcenter_of_mass(tc[blob_tc[\u001b[39m0\u001b[39m]]),  \u001b[39m# center of mass\u001b[39;00m\n\u001b[0;32m     56\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mvolume\u001b[39m\u001b[39m\"\u001b[39m: np\u001b[39m.\u001b[39mcount_nonzero(tc[blob_tc[\u001b[39m0\u001b[39m]]) \u001b[39m/\u001b[39m \u001b[39m10\u001b[39m\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m,  \u001b[39m# volume in cm^3\u001b[39;00m\n\u001b[0;32m     57\u001b[0m     }\n\u001b[0;32m     58\u001b[0m et_non_txt \u001b[39m=\u001b[39m {\n\u001b[1;32m---> 59\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mcenter\u001b[39m\u001b[39m\"\u001b[39m: ndimage\u001b[39m.\u001b[39mcenter_of_mass(et[blob_et[\u001b[39m0\u001b[39;49m]]),  \u001b[39m# center of mass\u001b[39;00m\n\u001b[0;32m     60\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mvolume\u001b[39m\u001b[39m\"\u001b[39m: np\u001b[39m.\u001b[39mcount_nonzero(et[blob_et[\u001b[39m0\u001b[39m]]) \u001b[39m/\u001b[39m \u001b[39m10\u001b[39m\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m,  \u001b[39m# volume in cm^3\u001b[39;00m\n\u001b[0;32m     61\u001b[0m     }\n\u001b[0;32m     63\u001b[0m feature[\u001b[39m'\u001b[39m\u001b[39mnon-textural\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m {\n\u001b[0;32m     64\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mwt\u001b[39m\u001b[39m\"\u001b[39m : wt_non_txt,\n\u001b[0;32m     65\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mtc\u001b[39m\u001b[39m\"\u001b[39m : tc_non_txt,\n\u001b[0;32m     66\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39met\u001b[39m\u001b[39m\"\u001b[39m : et_non_txt\n\u001b[0;32m     67\u001b[0m }\n\u001b[0;32m     69\u001b[0m \u001b[39mreturn\u001b[39;00m feature\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -1062,9 +1058,10 @@
     "\n",
     "        features_df = pd.concat([features_df, features],ignore_index=True)\n",
     "\n",
-    "    except Exception as e:\n",
-    "\n",
-    "        print(f\"Error processing case: {case}\\nError: {e}\")\n"
+    "    except:\n",
+    "        print(f\"Error processing case: {case}\\n\")\n",
+    "        print(\"Unexpected error:\", sys.exc_info()[0])\n",
+    "        raise\n"
    ]
   },
   {
