--- a/Textural Analysis.ipynb
+++ b/Textural Analysis.ipynb
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1597,80 +1597,80 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>30.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>23.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>0.869380</td>\n",
-       "      <td>0.889860</td>\n",
-       "      <td>0.874622</td>\n",
-       "      <td>0.763275</td>\n",
-       "      <td>inf</td>\n",
-       "      <td>53.556330</td>\n",
-       "      <td>16.502156</td>\n",
-       "      <td>inf</td>\n",
+       "      <td>0.883456</td>\n",
+       "      <td>0.888282</td>\n",
+       "      <td>0.906479</td>\n",
+       "      <td>0.855607</td>\n",
+       "      <td>24.283677</td>\n",
+       "      <td>49.127096</td>\n",
+       "      <td>13.848914</td>\n",
+       "      <td>9.875022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.066024</td>\n",
-       "      <td>0.072361</td>\n",
-       "      <td>0.098597</td>\n",
-       "      <td>0.268518</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30.764728</td>\n",
-       "      <td>20.257281</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.058803</td>\n",
+       "      <td>0.075626</td>\n",
+       "      <td>0.068617</td>\n",
+       "      <td>0.064306</td>\n",
+       "      <td>12.358090</td>\n",
+       "      <td>29.281668</td>\n",
+       "      <td>13.022314</td>\n",
+       "      <td>8.331569</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>0.672317</td>\n",
        "      <td>0.720867</td>\n",
        "      <td>0.642857</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.653226</td>\n",
        "      <td>7.344212</td>\n",
        "      <td>9.949874</td>\n",
        "      <td>1.414214</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>1.732051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>0.823670</td>\n",
-       "      <td>0.861681</td>\n",
-       "      <td>0.857075</td>\n",
-       "      <td>0.797859</td>\n",
-       "      <td>18.479974</td>\n",
-       "      <td>29.075431</td>\n",
-       "      <td>6.537607</td>\n",
-       "      <td>5.544060</td>\n",
+       "      <td>0.880296</td>\n",
+       "      <td>0.853002</td>\n",
+       "      <td>0.893038</td>\n",
+       "      <td>0.835743</td>\n",
+       "      <td>13.168033</td>\n",
+       "      <td>21.853962</td>\n",
+       "      <td>6.281752</td>\n",
+       "      <td>5.610894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>0.894873</td>\n",
-       "      <td>0.918773</td>\n",
-       "      <td>0.914444</td>\n",
-       "      <td>0.869340</td>\n",
-       "      <td>29.471555</td>\n",
-       "      <td>54.653325</td>\n",
-       "      <td>10.862390</td>\n",
+       "      <td>0.901197</td>\n",
+       "      <td>0.911046</td>\n",
+       "      <td>0.925334</td>\n",
+       "      <td>0.876030</td>\n",
+       "      <td>22.597714</td>\n",
+       "      <td>51.361464</td>\n",
+       "      <td>10.344080</td>\n",
        "      <td>7.071068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>0.916064</td>\n",
-       "      <td>0.941041</td>\n",
-       "      <td>0.945890</td>\n",
-       "      <td>0.889727</td>\n",
-       "      <td>38.811611</td>\n",
-       "      <td>79.723125</td>\n",
-       "      <td>17.934363</td>\n",
-       "      <td>12.372022</td>\n",
+       "      <td>0.917198</td>\n",
+       "      <td>0.945486</td>\n",
+       "      <td>0.949435</td>\n",
+       "      <td>0.891450</td>\n",
+       "      <td>32.197204</td>\n",
+       "      <td>72.530934</td>\n",
+       "      <td>15.673129</td>\n",
+       "      <td>10.073223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -1678,10 +1678,10 @@
        "      <td>0.969876</td>\n",
        "      <td>0.961973</td>\n",
        "      <td>0.943314</td>\n",
-       "      <td>inf</td>\n",
+       "      <td>51.255711</td>\n",
        "      <td>105.280578</td>\n",
-       "      <td>104.201727</td>\n",
-       "      <td>inf</td>\n",
+       "      <td>60.646517</td>\n",
+       "      <td>32.649655</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1689,33 +1689,33 @@
       ],
       "text/plain": [
        "        dice_avg    dice_wt    dice_tc    dice_et    hdf_avg      hdf_wt  \\\n",
-       "count  30.000000  30.000000  30.000000  30.000000  30.000000   30.000000   \n",
-       "mean    0.869380   0.889860   0.874622   0.763275        inf   53.556330   \n",
-       "std     0.066024   0.072361   0.098597   0.268518        NaN   30.764728   \n",
-       "min     0.672317   0.720867   0.642857   0.000000   7.344212    9.949874   \n",
-       "25%     0.823670   0.861681   0.857075   0.797859  18.479974   29.075431   \n",
-       "50%     0.894873   0.918773   0.914444   0.869340  29.471555   54.653325   \n",
-       "75%     0.916064   0.941041   0.945890   0.889727  38.811611   79.723125   \n",
-       "max     0.958388   0.969876   0.961973   0.943314        inf  105.280578   \n",
+       "count  23.000000  23.000000  23.000000  23.000000  23.000000   23.000000   \n",
+       "mean    0.883456   0.888282   0.906479   0.855607  24.283677   49.127096   \n",
+       "std     0.058803   0.075626   0.068617   0.064306  12.358090   29.281668   \n",
+       "min     0.672317   0.720867   0.642857   0.653226   7.344212    9.949874   \n",
+       "25%     0.880296   0.853002   0.893038   0.835743  13.168033   21.853962   \n",
+       "50%     0.901197   0.911046   0.925334   0.876030  22.597714   51.361464   \n",
+       "75%     0.917198   0.945486   0.949435   0.891450  32.197204   72.530934   \n",
+       "max     0.958388   0.969876   0.961973   0.943314  51.255711  105.280578   \n",
        "\n",
-       "           hdf_tc     hdf_et  \n",
-       "count   30.000000  30.000000  \n",
-       "mean    16.502156        inf  \n",
-       "std     20.257281        NaN  \n",
-       "min      1.414214   0.000000  \n",
-       "25%      6.537607   5.544060  \n",
-       "50%     10.862390   7.071068  \n",
-       "75%     17.934363  12.372022  \n",
-       "max    104.201727        inf  "
+       "          hdf_tc     hdf_et  \n",
+       "count  23.000000  23.000000  \n",
+       "mean   13.848914   9.875022  \n",
+       "std    13.022314   8.331569  \n",
+       "min     1.414214   1.732051  \n",
+       "25%     6.281752   5.610894  \n",
+       "50%    10.344080   7.071068  \n",
+       "75%    15.673129  10.073223  \n",
+       "max    60.646517  32.649655  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metric_df.iloc[:,1:].describe()"
+    "metric_df.iloc[:,1:][metric_df.dice_et > 0 ].describe()"
    ]
   },
   {
