For supervisor reference

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Just Experimenting: Skip Section to Next\n",
+    "\n",
+    "This section is just exploration and getting my bearings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -312,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining Functions for each feature"
+    "# Defining Functions for each feature"
    ]
   },
   {
