--- a/experiments/tensorboard_logs/Repl DynUNET w Dice CE no Foreground 2 res low channel constant/follow_optimise_UNet_paper.ipynb
+++ b/experiments/tensorboard_logs/Repl DynUNET w Dice CE no Foreground 2 res low channel constant/follow_optimise_UNet_paper.ipynb
@@ -101,7 +101,7 @@
     "    Ratio of LGG:HGG in {len(training)} Training Samples:\n",
     "    \\t Ratio = {np.count_nonzero(train_check==0)/np.count_nonzero(train_check==1):.2f}\\n\n",
     "\n",
-    "    Ratio of LGG:HGG in {len(validation)} Validation Samples:\n",
+    "    Ratio of LGG:HGG in {len(validation)} Testing Samples:\n",
     "    \\t Ratio = {np.count_nonzero(val_check==0)/np.count_nonzero(val_check==1):.2f}\\n\n",
     "    \n",
     "    \"\"\"\n",
@@ -152,7 +152,7 @@
       "    \t Ratio = 0.26\n",
       "\n",
       "\n",
-      "    Ratio of LGG:HGG in 74 Validation Samples:\n",
+      "    Ratio of LGG:HGG in 74 Testing Samples:\n",
       "    \t Ratio = 0.25\n",
       "\n",
       "    \n",
@@ -162,8 +162,8 @@
    ],
    "source": [
     "# Prepare list of All training Cases\n",
-    "TRAINING_DATASET_PATH = r\"../MICCAI_BraTS2020_TrainingData/\"\n",
-    "NAME_MAPPING = r\"../MICCAI_BraTS2020_TrainingData/name_mapping.csv\"\n",
+    "TRAINING_DATASET_PATH = r\"../../../MICCAI_BraTS2020_TrainingData/\"\n",
+    "NAME_MAPPING = r\"../../../MICCAI_BraTS2020_TrainingData/name_mapping.csv\"\n",
     "\n",
     "# Function returns names of cases to be used\n",
     "train_cases, val_cases = train_val_test_dataset(NAME_MAPPING)"
